--- a/rpi/jessie/curl/Dockerfile
+++ b/rpi/jessie/curl/Dockerfile
@@ -1,4 +1,4 @@
-FROM resin/armv7hf-debian:jessie
+FROM resin/rpi-raspbian:jessie
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
 		ca-certificates \
